--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title> mama thing </title>
+<title> something about horses, clubs, eh... </title>
 </head>
 <body>
 <p><i> This is mamas website thing </i> </p>
