--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title> something about horses, clubs, eh... </title>
 </head>
 <body>
-<p><i> This is mamas website thing </i> </p>
+<p><i> something something </i> </p>
 </body>
 </html>
