--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-    <title>testing</title>
+  <head>
+    <meta charset="UTF-8">
+    <title> something about horses, clubs, eh...</title>
     <script src="libraries/p5.js" type="text/javascript"></script>
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
@@ -11,10 +11,8 @@
     <script src="sketch.js" type="text/javascript"></script>
 
     <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-  
-<title> something about horses, clubs, eh... </title>
-</head>
-<body>
-<p><i> something something </i> </p>
-</body>
+  </head>
+  <body>
+    <p><i> something something </i> </p>
+  </body>
 </html>
